fix: add fix scrollbar in google chrome

--- a/simon-says/src/css/components/body.css
+++ b/simon-says/src/css/components/body.css
@@ -5,4 +5,6 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+
+  overflow: hidden;
 }
